# codex-broker

./: .dockerignore  .gitignore  Dockerfile  README.md  codex-broker-spec.md  package.json  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: docker-publish.yml
clients/typescript/: codex-broker-client.ts
docs/: app-server-modes.md  architecture.md  configuration.md  deployment.md  host-integration.md  integrating-with-broker.md
examples/: docker-compose.local.yml  docker-compose.yml
examples/bundles/: README.md
examples/bundles/document-jobs-v1/: bundle.json
examples/secrets/: codex_broker_key.example
fern/: docs.yml  fern.config.json  generators.yml  styles.css
fern/openapi/: openapi.json
scripts/: export_openapi.py
src/codex_broker/: __init__.py  __main__.py  account_api.py  app_server.py  auth.py  auth_api.py  bundles.py  client.py  config.py  events.py  http_api.py  identity.py  interactions.py  runtime_errors.py  scheduler.py  scheduler_config.py  scheduler_errors.py  scheduler_interactions.py  scheduler_threads.py  services.py  state.py  state_schema.py  state_transactions.py  tool_adapter_mcp.py  util.py
tests/: fake_codex.py  test_account_api.py  test_app_server.py  test_auth.py  test_auth_principals.py  test_broker.py  test_bundles.py  test_client.py  test_config_profiles.py  test_events.py  test_metrics.py  test_openapi.py  test_profile_binding.py  test_readiness.py  test_scheduler_concurrency.py  test_shutdown_signal.py  test_state.py  test_thread_mapping.py  test_tool_adapter.py  test_util.py
(+17 files in other folders)
